Migrate Bartholomew documentation
This commit migrates the Bartholomew documentation from its standalone
website to the Fermyon Developer Home website.

Signed-off-by: Radu Matei <radu.matei@fermyon.com>

--- a/spin.toml
+++ b/spin.toml
@@ -43,3 +43,13 @@ environment = { DESTINATION = "/cloud/index" }
 [component.trigger]
 route = "/cloud"
 executor = { type = "wagi" }
+
+# Redirect /bartholomew to /bartholomew/index
+[[component]]
+id = "redirect-bartholomew-index"
+source = "modules/redirect.wasm"
+environment = { DESTINATION = "/bartholomew/index" }
+[component.trigger]
+route = "/bartholomew"
+executor = { type = "wagi" }
+
